objects/MasterModuleRacking_Junction__c.object
<CustomObject>
    <description>Link between racking configurations, a module, and a master. This facilitates different associations of racking collections to each module and sales method.
Release WW22 - 2016</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Configurator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to the master configurator to tie the racking junction to the master record for each sales process</description>
        <label>Master Configurator</label>
        <referenceTo>Master_Configurator__c</referenceTo>
        <relationshipLabel>MasterModuleRacking Junctions</relationshipLabel>
        <relationshipName>MasterModuleRacking_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModuleRackingJunction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to tie a ModuleRackingJunction to a master record.
Release WW22 - 2016</description>
        <label>ModuleRackingJunction</label>
        <referenceTo>ModuleRackingJunction__c</referenceTo>
        <relationshipLabel>MasterModuleRacking Junctions</relationshipLabel>
        <relationshipName>MasterModuleRacking_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <formula>ModuleRackingJunction__r.Module_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking__c</fullName>
        <formula>ModuleRackingJunction__r.Racking_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Racking</label>
        <type>Text</type>
    </fields>
    <label>MasterModuleRacking Junction</label>
    <nameField>
        <displayFormat>MMRJ-{00000}</displayFormat>
        <label>MasterModuleRacking Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterModuleRacking Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>